[tool.poetry]
name = "The-Dungeon-Zone"
version = "0.9.2"
description = "Go on an Adventure in the Dungeon Zone, and see if you can make it out alive..."
authors = ["Happy24, officialhappy24@gmail.com","KingLeap, <email@here.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
